<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white" >
    
 <TextView
        android:id="@+id/pdtNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pdtName"
        android:textColor="#000000"
        android:textSize="@dimen/pdtNametextSize" >
    </TextView>
    


<!--    <ImageButton
        android:id="@+id/pdtImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/welcomescreen" >
    </ImageButton>
 -->   
     <ImageView android:id="@+id/image"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_margin="10dip"/>
 
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@android:color/white" >

        <Button
            android:id="@+id/totalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" 
            android:layout_weight="1"
            android:onClick="pdttotalpriceview"
            android:textSize="23sp"
            android:text="@string/totalPrice"
            android:textStyle="bold" />

        <Button
            android:id="@+id/priceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight=".20"
            android:onClick="pdtpriceview"
            android:text="@string/price"
             />

        <Button
            android:id="@+id/stockButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".20"
            android:gravity="center"
            android:onClick="pdtstockview"
            android:text="@string/stock" >
        </Button>

        <Button
            android:id="@+id/shippingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".20"
            android:gravity="center"
            android:onClick="pdtshippingpriceview"
            android:text="@string/shipping" >
            </Button>
    </LinearLayout>
    

         <ListView android:id="@id/android:list" 
      android:layout_width="wrap_content" 
      android:layout_height="0dp"
      android:background="@android:color/white"
      android:layout_weight="1"
      
       />
  
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:background="@android:color/white" >
        
              <Button
        android:id="@+id/menuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="activity_main"
        android:layout_weight="1"
        android:text="@string/menu"
        android:background="@color/light_blue"
        android:textStyle="bold" >
    </Button>    

           <Button
               android:id="@+id/moreInfobutton"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:layout_weight="1"
                android:text="More Info" 
                android:background="@color/very_light_green"
                android:textStyle="bold">

    </Button>
          
           
</LinearLayout>

</LinearLayout>
