<!-- <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="5dp"
    android:stretchColumns="*" > -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white" >
 
 <TextView
        android:id="@+id/pdtNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pdtName"
        android:textColor="#000000"
        android:textSize="@dimen/pdtNametextSize" >
    </TextView>
    

 <!--    <ImageButton
        android:id="@+id/pdtImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/ic_launcher" >
    </ImageButton>
    -->
    
    <ImageView android:id="@+id/image"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_margin="10dip"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@android:color/white" >
        
        <!-- Smita Changes for "total" -->
        <Button
            android:id="@+id/totalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".20"
            android:gravity="center"
            android:onClick="pdttotalpriceview"
            android:text="@string/totalPrice" />
        
            <Button
            android:id="@+id/priceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/price"
            android:textSize="23sp"
            android:onClick = "pdtpriceview"
            android:textStyle="bold" >
        </Button>
        

        <Button
            android:id="@+id/stockButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".20"
            android:gravity="center"
            android:onClick="pdtstockview"
            android:text="@string/stock" >
        </Button>

        <Button
            android:id="@+id/shippingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".20"
            android:gravity="center"
            android:onClick="pdtshippingpriceview"
            android:text="@string/shipping" >
        </Button>
    </LinearLayout>

    
     <ListView android:id="@id/android:list" 
      android:layout_width="fill_parent" 
      android:layout_height="0dp"
      android:background="@android:color/white"
      android:layout_weight="1"
      
       />
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:background="@android:color/white" >

        <Button
            android:id="@+id/menuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/light_blue"
            android:gravity="center"
            android:onClick="activity_main"
            android:text="@string/menu"
            android:textStyle="bold" >
        </Button>

        <Button
            android:id="@+id/moreInfobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/very_light_green"
            android:gravity="center"
            android:text="More Info"
            android:textStyle="bold" >
        </Button>
    </LinearLayout>
</LinearLayout>